fix: logo on mobile navigation

--- a/frontend/src/components/SharedLayout/MobileNavigation/MobileNavigation.module.css
+++ b/frontend/src/components/SharedLayout/MobileNavigation/MobileNavigation.module.css
@@ -25,6 +25,11 @@
     display: none;
   }
 }
+
+.logo-box {
+  width: 44px;
+  height: 44px;
+}
 .logo {
   align-self: center;
   grid-area: logo;
